# BookQA

./: .gitignore  README.md  app.py  main.py  pyproject.toml
