[tool.poetry]
name = "lindex"
version = "0.1.0"
description = ""
authors = ["Arash Khazaei <0xclay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.10.57"
llama-index-llms-groq = "^0.1.4"
llama-index-embeddings-huggingface = "^0.2.2"
llama-index-embeddings-instructor = "^0.1.3"
einops = "^0.8.0"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
llama-index-vector-stores-elasticsearch = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
